--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spam Share by kysler</title>
+    <title>Spam Share by bryson</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
@@ -725,7 +725,7 @@
                     </div>
                     <div>
                         <h1>Spam Share</h1>
-                        <p class="subtitle">Automated Facebook sharing tool by kysler</p>
+                        <p class="subtitle">Automated Facebook sharing tool by bryson</p>
                     </div>
                 </div>
                 <div class="user-badge" id="user-badge">
@@ -790,7 +790,7 @@
                     <i class="fas fa-code-branch"></i>
                     <span>v2.2</span>
                 </div>
-                <p><i class="fas fa-user-shield"></i> Administrator: kysler</p>
+                <p><i class="fas fa-user-shield"></i> Administrator: bryson</p>
                 <button class="logout-button" onclick="logout()">
                     <i class="fas fa-sign-out-alt"></i> Logout
                 </button>
